# turfcoach

./: .gitignore  README.md  pyproject.toml
turfcoach/: weather.py
