[tool.poetry]
name = "turfcoach"
version = "0.1.0"
description = ""
authors = ["Kim Korte <psaniko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.3"
plotext = "^5.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
